Logo and other pages added

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,16 @@
 @import "tailwindcss";
 @theme {
-    --color-primary: #182763;
-    
+    --color-primary: #ef7324;
+    --color-secondary: #fefefc;
     --font-sans: 'Inter', 'ui-sans-serif', 'system-ui', '-apple-system', 'system-ui', 'Segoe UI', 'Roboto', 'Helvetica Neue', 'Arial', 'Noto Sans', 'sans-serif', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
     --font-body: 'Inter', 'ui-sans-serif', 'system-ui', '-apple-system', 'system-ui', 'Segoe UI', 'Roboto', 'Helvetica Neue', 'Arial', 'Noto Sans', 'sans-serif', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
     --font-mono: 'ui-monospace', 'SFMono-Regular', 'Menlo', 'Monaco', 'Consolas', 'Liberation Mono', 'Courier New', 'monospace';
+}
+
+.btn-primary {
+    @apply bg-primary text-secondary rounded-full py-2 px-5 font-medium;
+}
+
+.btn-secondary {
+    @apply bg-secondary text-primary;
 }
